--- a/nbs/dl1/lesson4-tabular.ipynb
+++ b/nbs/dl1/lesson4-tabular.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,156 +69,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <col width='10%'>  <tr>\n",
-       "    <th>workclass</th>\n",
-       "    <th>education</th>\n",
-       "    <th>marital-status</th>\n",
-       "    <th>occupation</th>\n",
-       "    <th>relationship</th>\n",
-       "    <th>race</th>\n",
-       "    <th>education-num_na</th>\n",
-       "    <th>age</th>\n",
-       "    <th>fnlwgt</th>\n",
-       "    <th>education-num</th>\n",
-       "    <th>target</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Never-married</th>\n",
-       "    <th> Sales</th>\n",
-       "    <th> Not-in-family</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-1.2158</th>\n",
-       "    <th>1.1004</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> ?</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Widowed</th>\n",
-       "    <th> ?</th>\n",
-       "    <th> Not-in-family</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>1.8627</th>\n",
-       "    <th>0.0976</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Self-emp-not-inc</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Never-married</th>\n",
-       "    <th> Craft-repair</th>\n",
-       "    <th> Own-child</th>\n",
-       "    <th> Black</th>\n",
-       "    <th>False</th>\n",
-       "    <th>0.0303</th>\n",
-       "    <th>0.2092</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Married-civ-spouse</th>\n",
-       "    <th> Protective-serv</th>\n",
-       "    <th> Husband</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>1.5695</th>\n",
-       "    <th>-0.5938</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Married-civ-spouse</th>\n",
-       "    <th> Handlers-cleaners</th>\n",
-       "    <th> Husband</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-0.9959</th>\n",
-       "    <th>-0.0318</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> 10th</th>\n",
-       "    <th> Married-civ-spouse</th>\n",
-       "    <th> Farming-fishing</th>\n",
-       "    <th> Wife</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-0.7027</th>\n",
-       "    <th>0.6071</th>\n",
-       "    <th>-1.5958</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> HS-grad</th>\n",
-       "    <th> Married-civ-spouse</th>\n",
-       "    <th> Machine-op-inspct</th>\n",
-       "    <th> Husband</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>0.1036</th>\n",
-       "    <th>-0.0968</th>\n",
-       "    <th>-0.4224</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> Some-college</th>\n",
-       "    <th> Married-civ-spouse</th>\n",
-       "    <th> Exec-managerial</th>\n",
-       "    <th> Own-child</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-0.7760</th>\n",
-       "    <th>-0.6653</th>\n",
-       "    <th>-0.0312</th>\n",
-       "    <th>>=50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> State-gov</th>\n",
-       "    <th> Some-college</th>\n",
-       "    <th> Never-married</th>\n",
-       "    <th> Tech-support</th>\n",
-       "    <th> Own-child</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-0.8493</th>\n",
-       "    <th>-1.4959</th>\n",
-       "    <th>-0.0312</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "  <tr>\n",
-       "    <th> Private</th>\n",
-       "    <th> 11th</th>\n",
-       "    <th> Never-married</th>\n",
-       "    <th> Machine-op-inspct</th>\n",
-       "    <th> Not-in-family</th>\n",
-       "    <th> White</th>\n",
-       "    <th>False</th>\n",
-       "    <th>-1.0692</th>\n",
-       "    <th>-0.9516</th>\n",
-       "    <th>-1.2046</th>\n",
-       "    <th><50k</th>\n",
-       "  </tr>\n",
-       "</table>\n"
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>workclass</th>\n",
+       "      <th>education</th>\n",
+       "      <th>marital-status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>education-num_na</th>\n",
+       "      <th>age</th>\n",
+       "      <th>fnlwgt</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Separated</td>\n",
+       "      <td>Tech-support</td>\n",
+       "      <td>Unmarried</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.5561</td>\n",
+       "      <td>1.1401</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Divorced</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.4828</td>\n",
+       "      <td>0.4461</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.8365</td>\n",
+       "      <td>0.0009</td>\n",
+       "      <td>1.1422</td>\n",
+       "      <td>&gt;=50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Federal-gov</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.1163</td>\n",
+       "      <td>-0.0254</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&gt;=50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1.4357</td>\n",
+       "      <td>1.7861</td>\n",
+       "      <td>-0.4224</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>11th</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.4095</td>\n",
+       "      <td>-0.3060</td>\n",
+       "      <td>-1.2046</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.1896</td>\n",
+       "      <td>-0.8843</td>\n",
+       "      <td>1.1422</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Local-gov</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Exec-managerial</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.3496</td>\n",
+       "      <td>-1.3494</td>\n",
+       "      <td>-0.4224</td>\n",
+       "      <td>&gt;=50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>12th</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>Own-child</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-1.5090</td>\n",
+       "      <td>1.1574</td>\n",
+       "      <td>-0.8135</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Private</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Machine-op-inspct</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.9831</td>\n",
+       "      <td>-0.2249</td>\n",
+       "      <td>-0.0312</td>\n",
+       "      <td>&lt;50k</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -234,11 +239,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "learn = tabular_learner(data, layers=[200,100], metrics=accuracy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TabularModel(\n",
+       "  (embeds): ModuleList(\n",
+       "    (0): Embedding(10, 6)\n",
+       "    (1): Embedding(17, 8)\n",
+       "    (2): Embedding(8, 5)\n",
+       "    (3): Embedding(16, 8)\n",
+       "    (4): Embedding(7, 5)\n",
+       "    (5): Embedding(6, 4)\n",
+       "    (6): Embedding(3, 3)\n",
+       "  )\n",
+       "  (emb_drop): Dropout(p=0.0, inplace=False)\n",
+       "  (bn_cont): BatchNorm1d(3, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "  (layers): Sequential(\n",
+       "    (0): Linear(in_features=42, out_features=200, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): BatchNorm1d(200, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (3): Linear(in_features=200, out_features=100, bias=True)\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): BatchNorm1d(100, eps=1e-05, momentum=0.1, affine=True, track_running_stats=True)\n",
+       "    (6): Linear(in_features=100, out_features=2, bias=True)\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learn.model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "functools.partial(<class 'torch.optim.adam.Adam'>, betas=(0.9, 0.99))"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learn.opt_func"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "??Normalize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "FlattenedLoss of CrossEntropyLoss()"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learn.loss_func"
    ]
   },
   {
@@ -325,6 +420,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
